k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-funcionario
  namespace: sistal
  labels:
    app: front-funcionario
    tier: frontend
spec:
  replicas: 2 # Alta disponibilidad
  selector:
    matchLabels:
      app: front-funcionario
  template:
    metadata:
      labels:
        app: front-funcionario
    spec:
      containers:
      - name: front-funcionario
        # La imagen se reemplazará en el pipeline CI/CD gracias a IMAGE_PLACEHOLDER
        image: us-east1-docker.pkg.dev/sistal-490016/sistal-docker-images/front-funcionario:IMAGE_PLACEHOLDER
        imagePullPolicy: Always
        ports:
        - containerPort: 3000 # NGINX dentro del contenedor expone el puerto 80 por defecto
        
        # Opcional: Recursos. Los frontends estáticos consumen muy poca RAM/CPU
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
