k8s/service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: front-funcionario-svc
  namespace: default
  labels:
    app: front-funcionario
spec:
  type: ClusterIP
  selector:
    app: front-funcionario
  ports:
  - port: 3000        # Puerto del Service dentro del clúster
    targetPort: 3000  # Puerto del contenedor (NGINX sirviendo React)
    protocol: TCP
